refactor and fix file encoding / decoding